drag-and-drop appears to be working for move

--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -12,12 +12,12 @@ build/browser/src/helpers/icons.js: g49P5Cdu
 build/browser/src/index.js: KGlHD4m9
 build/browser/src/components/gadget/index.js: Qq2YrOnT
 build/browser/src/components/site/index.js: sCuXfKaP
-build/browser/src/components/site/edit/css.js: fWVULe3o
+build/browser/src/components/site/edit/css.js: uLECYMyx
 build/browser/src/components/site/edit/render/actions.js: FEm1NJ2k
 build/browser/src/components/site/summarize/index.js: RvCs-4Ad
 build/browser/src/helpers/site.js: ONJ8VzdQ
 build/browser/src/components/connect/index.js: VcPzQ3X_
-build/browser/src/components/site/edit/index.js: WWmpcft5
+build/browser/src/components/site/edit/index.js: xByU7vI_
 build/browser/src/components/sites/view/html.js: aLLEodGu
 build/browser/src/components/site/remove/html.js: K0xADcL9
 build/browser/src/components/gadget/add/html.js: 6Jz4sbpf
