editable title and description

--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -1,23 +1,23 @@
 build/browser/src/components/gadget/add/index.js: MS0vvRtc
 build/browser/src/components/gadget/add/css.js: ffFstlez
-build/browser/src/components/site/edit/helpers.js: FquY4_yt
+build/browser/src/components/site/edit/helpers.js: 2-DWJRGn
 build/browser/src/components/site/add/index.js: Cuu2Sgc_
 build/browser/src/components/sites/index.js: hM57VLk-
 build/browser/src/components/site/summarize/html.js: 9uOR6emx
 build/browser/src/components/site/remove/index.js: I6VuQZSn
-build/browser/src/components/site/edit/html.js: N3QukE-B
+build/browser/src/components/site/edit/html.js: tYPUt5I-
 build/browser/src/components/site/add/css.js: FG4ecNpu
 build/browser/src/components/site/remove/css.js: FG4ecNpu
-build/browser/src/helpers/icons.js: g49P5Cdu
+build/browser/src/helpers/icons.js: vZyA0OYk
 build/browser/src/index.js: KGlHD4m9
 build/browser/src/components/gadget/index.js: Qq2YrOnT
 build/browser/src/components/site/index.js: sCuXfKaP
-build/browser/src/components/site/edit/css.js: uLECYMyx
+build/browser/src/components/site/edit/css.js: XlHmAorM
 build/browser/src/components/site/edit/render/actions.js: FEm1NJ2k
 build/browser/src/components/site/summarize/index.js: RvCs-4Ad
 build/browser/src/helpers/site.js: ONJ8VzdQ
 build/browser/src/components/connect/index.js: VcPzQ3X_
-build/browser/src/components/site/edit/index.js: xByU7vI_
+build/browser/src/components/site/edit/index.js: v2KKIJjG
 build/browser/src/components/sites/view/html.js: aLLEodGu
 build/browser/src/components/site/remove/html.js: K0xADcL9
 build/browser/src/components/gadget/add/html.js: 6Jz4sbpf
@@ -44,7 +44,7 @@ build/browser/src/components/site/edit/mock/index.js: iJtL_kDW
 build/browser/src/components/site/edit/mock/data.js: KKOdceFp
 build/browser/src/components/layout/edit/helpers.js: hytphRqI
 build/browser/src/components/layout/edit/state.js: RnhWtgbD
-build/browser/src/helpers/state.js: lqI4FRWP
+build/browser/src/helpers/state.js: iX-lcb0Y
 build/browser/src/helpers/observe.js: 5BnBtBzO
 build/browser/src/helpers/mock/data.js: 3Vujop6f
 build/browser/src/helpers/mock/index.js: '-v23Nbt-'
