fixes sansa/#23: remove gadget

--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -10,14 +10,14 @@ build/browser/src/components/site/add/css.js: FG4ecNpu
 build/browser/src/components/site/remove/css.js: FG4ecNpu
 build/browser/src/helpers/icons.js: vZyA0OYk
 build/browser/src/index.js: KGlHD4m9
-build/browser/src/components/gadget/index.js: Qq2YrOnT
+build/browser/src/components/gadget/index.js: 3F2LwSM4
 build/browser/src/components/site/index.js: sCuXfKaP
-build/browser/src/components/site/edit/css.js: XlHmAorM
+build/browser/src/components/site/edit/css.js: U-VXwawS
 build/browser/src/components/site/edit/render/actions.js: FEm1NJ2k
 build/browser/src/components/site/summarize/index.js: RvCs-4Ad
 build/browser/src/helpers/site.js: ONJ8VzdQ
 build/browser/src/components/connect/index.js: VcPzQ3X_
-build/browser/src/components/site/edit/index.js: v2KKIJjG
+build/browser/src/components/site/edit/index.js: HYXqVrAu
 build/browser/src/components/sites/view/html.js: aLLEodGu
 build/browser/src/components/site/remove/html.js: K0xADcL9
 build/browser/src/components/gadget/add/html.js: 6Jz4sbpf
@@ -44,7 +44,10 @@ build/browser/src/components/site/edit/mock/index.js: iJtL_kDW
 build/browser/src/components/site/edit/mock/data.js: KKOdceFp
 build/browser/src/components/layout/edit/helpers.js: hytphRqI
 build/browser/src/components/layout/edit/state.js: RnhWtgbD
-build/browser/src/helpers/state.js: iX-lcb0Y
-build/browser/src/helpers/observe.js: 5BnBtBzO
+build/browser/src/helpers/state.js: 4xNotO9g
+build/browser/src/helpers/observe.js: ZFWHRfgD
 build/browser/src/helpers/mock/data.js: 3Vujop6f
 build/browser/src/helpers/mock/index.js: '-v23Nbt-'
+build/browser/src/components/gadget/remove/index.js: UIQhYl0N
+build/browser/src/components/gadget/remove/css.js: hbsiskTa
+build/browser/src/components/gadget/remove/html.js: Cm1m_SbN
