fixes dashkite/sansa#4 and dashkite/sansa#7

--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -1,6 +1,6 @@
 build/browser/src/components/gadget/add/index.js: MS0vvRtc
 build/browser/src/components/gadget/add/css.js: ffFstlez
-build/browser/src/components/site/edit/helpers.js: 2-DWJRGn
+build/browser/src/components/site/edit/helpers.js: rrLnElOJ
 build/browser/src/components/site/add/index.js: Cuu2Sgc_
 build/browser/src/components/sites/index.js: hM57VLk-
 build/browser/src/components/site/summarize/html.js: 9uOR6emx
@@ -9,7 +9,7 @@ build/browser/src/components/site/edit/html.js: tYPUt5I-
 build/browser/src/components/site/add/css.js: FG4ecNpu
 build/browser/src/components/site/remove/css.js: FG4ecNpu
 build/browser/src/helpers/icons.js: vZyA0OYk
-build/browser/src/index.js: KGlHD4m9
+build/browser/src/index.js: xvJz2SLy
 build/browser/src/components/gadget/index.js: 3F2LwSM4
 build/browser/src/components/site/index.js: sCuXfKaP
 build/browser/src/components/site/edit/css.js: U-VXwawS
@@ -17,7 +17,7 @@ build/browser/src/components/site/edit/render/actions.js: FEm1NJ2k
 build/browser/src/components/site/summarize/index.js: RvCs-4Ad
 build/browser/src/helpers/site.js: ONJ8VzdQ
 build/browser/src/components/connect/index.js: VcPzQ3X_
-build/browser/src/components/site/edit/index.js: HYXqVrAu
+build/browser/src/components/site/edit/index.js: GSeWVnwr
 build/browser/src/components/sites/view/html.js: aLLEodGu
 build/browser/src/components/site/remove/html.js: K0xADcL9
 build/browser/src/components/gadget/add/html.js: 6Jz4sbpf
@@ -36,13 +36,13 @@ build/browser/src/components/layout/index.js: M_VasUJR
 build/browser/src/components/layout/add/css.js: Ch1usuV4
 build/browser/src/components/layout/add/html.js: no3SSrcM
 build/browser/src/components/layout/add/index.js: ks4hdmFD
-build/browser/src/components/layout/edit/css.js: ocW0JNfG
-build/browser/src/components/layout/edit/index.js: dTgYRIx2
-build/browser/src/components/layout/edit/html.js: 4nrSmpeh
+build/browser/src/components/layout/edit/css.js: Ch1usuV4
+build/browser/src/components/layout/edit/index.js: lbIiJNB5
+build/browser/src/components/layout/edit/html.js: kVjhMZso
 build/browser/src/components/site/edit/state.js: UwlRSRMY
 build/browser/src/components/site/edit/mock/index.js: iJtL_kDW
 build/browser/src/components/site/edit/mock/data.js: KKOdceFp
-build/browser/src/components/layout/edit/helpers.js: hytphRqI
+build/browser/src/components/layout/edit/helpers.js: UGK6su9s
 build/browser/src/components/layout/edit/state.js: RnhWtgbD
 build/browser/src/helpers/state.js: 4xNotO9g
 build/browser/src/helpers/observe.js: ZFWHRfgD
@@ -51,3 +51,37 @@ build/browser/src/helpers/mock/index.js: '-v23Nbt-'
 build/browser/src/components/gadget/remove/index.js: UIQhYl0N
 build/browser/src/components/gadget/remove/css.js: hbsiskTa
 build/browser/src/components/gadget/remove/html.js: Cm1m_SbN
+build/browser/src/components/page/edit/css.js: Ch1usuV4
+build/browser/src/components/page/edit/helpers.js: vJ5AfeNL
+build/browser/src/components/page/edit/html.js: VnEYQdid
+build/browser/src/components/page/edit/index.js: caTMhB5I
+build/browser/src/components/page/index.js: uQ5eE8YN
+build/browser/src/helpers/component/index.js: ChkAf0GS
+build/browser/src/helpers/component/basic.js: uvqPBMeE
+build/browser/src/helpers/component/gadget.js: NmrMSAAD
+build/browser/src/components/text/index.js: WaQkn5hM
+build/browser/src/components/text/edit/helpers.js: 2wQyRg3u
+build/browser/src/components/text/edit/css.js: Ch1usuV4
+build/browser/src/components/text/edit/html.js: WaKbZOxB
+build/browser/src/components/text/edit/index.js: WlW2CDd6
+build/browser/src/components/gadgets/page/edit/css.js: Ch1usuV4
+build/browser/src/components/gadgets/text/edit/helpers.js: YXZ1ovo5
+build/browser/src/components/gadgets/text/index.js: xt8Bl9vc
+build/browser/src/components/gadgets/text/edit/css.js: Ch1usuV4
+build/browser/src/components/gadgets/page/edit/helpers.js: lCLhEQpf
+build/browser/src/components/gadgets/layout/index.js: MZUjHLNp
+build/browser/src/components/gadgets/page/edit/index.js: xU73C18h
+build/browser/src/components/gadgets/text/edit/index.js: hAyQpgWy
+build/browser/src/components/gadgets/layout/edit/css.js: Ch1usuV4
+build/browser/src/components/gadgets/page/edit/html.js: LVgPugXr
+build/browser/src/components/gadgets/text/edit/html.js: kZZ3vynf
+build/browser/src/components/gadgets/layout/edit/index.js: SdcP4Auh
+build/browser/src/components/gadgets/page/index.js: RC-rfSHU
+build/browser/src/components/gadgets/layout/edit/html.js: W9JyMWdB
+build/browser/src/components/gadgets/layout/edit/helpers.js: pPhuZMFt
+build/browser/src/components/gadgets/icon/edit/css.js: Ch1usuV4
+build/browser/src/components/gadgets/icon/index.js: 2FMw9_2z
+build/browser/src/components/gadgets/icon/edit/index.js: jVIEXa1Y
+build/browser/src/components/gadgets/icon/edit/html.js: 5kmcBFGE
+build/browser/src/components/gadgets/icon/edit/helpers.js: ZW3-LF_w
+build/browser/src/components/gadgets/icon/edit/icons.js: D-RD_lA5
