--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "imports": {
     "#configuration": "./build/browser/src/configuration.js",
     "#helpers/*": "./build/browser/src/helpers/*.js",
+    "#helpers/component/*": "./build/browser/src/helpers/component/*.js",
     "#templates/*": "./build/browser/src/templates/*.js"
   },
   "exports": {
@@ -61,6 +62,7 @@
     "@dashkite/talisa": "link:../talisa",
     "@dashkite/vega-client": "link:../vega-client",
     "@dashkite/vellum": "link:../vellum",
-    "@gullerya/object-observer": "^6.1.3"
+    "@gullerya/object-observer": "^6.1.3",
+    "minisearch": "^7.1.0"
   }
 }
