icon autocomplete working but needs refactoring

--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -79,9 +79,9 @@ build/browser/src/components/gadgets/layout/edit/index.js: SdcP4Auh
 build/browser/src/components/gadgets/page/index.js: RC-rfSHU
 build/browser/src/components/gadgets/layout/edit/html.js: W9JyMWdB
 build/browser/src/components/gadgets/layout/edit/helpers.js: pPhuZMFt
-build/browser/src/components/gadgets/icon/edit/css.js: VyDN3K9V
+build/browser/src/components/gadgets/icon/edit/css.js: wNTLVz50
 build/browser/src/components/gadgets/icon/index.js: 2FMw9_2z
-build/browser/src/components/gadgets/icon/edit/index.js: 8CSNLpNW
-build/browser/src/components/gadgets/icon/edit/html.js: ZMnor8wT
-build/browser/src/components/gadgets/icon/edit/helpers.js: BAlYsx4N
+build/browser/src/components/gadgets/icon/edit/index.js: nbrQMev6
+build/browser/src/components/gadgets/icon/edit/html.js: PwYFnQPj
+build/browser/src/components/gadgets/icon/edit/helpers.js: F0l7wb8A
 build/browser/src/components/gadgets/icon/edit/icons.js: D-RD_lA5
