--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -9,7 +9,7 @@ build/browser/src/components/site/edit/html.js: tYPUt5I-
 build/browser/src/components/site/add/css.js: FG4ecNpu
 build/browser/src/components/site/remove/css.js: FG4ecNpu
 build/browser/src/helpers/icons.js: vZyA0OYk
-build/browser/src/index.js: xvJz2SLy
+build/browser/src/index.js: Ya7-UOcm
 build/browser/src/components/gadget/index.js: 3F2LwSM4
 build/browser/src/components/site/index.js: sCuXfKaP
 build/browser/src/components/site/edit/css.js: U-VXwawS
@@ -46,7 +46,7 @@ build/browser/src/components/layout/edit/helpers.js: UGK6su9s
 build/browser/src/components/layout/edit/state.js: RnhWtgbD
 build/browser/src/helpers/state.js: 4xNotO9g
 build/browser/src/helpers/observe.js: ZFWHRfgD
-build/browser/src/helpers/mock/data.js: 3Vujop6f
+build/browser/src/helpers/mock/data.js: pi40kBmQ
 build/browser/src/helpers/mock/index.js: '-v23Nbt-'
 build/browser/src/components/gadget/remove/index.js: UIQhYl0N
 build/browser/src/components/gadget/remove/css.js: hbsiskTa
@@ -91,3 +91,8 @@ build/browser/src/components/gadgets/icon/edit/icons/search.js: B31av7KH
 build/browser/src/components/gadgets/icon/edit/icons/events.js: Ek3-m7V8
 build/browser/src/components/gadgets/icon/edit/icons/data.js: D-RD_lA5
 build/browser/src/components/gadgets/icon/edit/icons/css.js: otsWvYyp
+build/browser/src/components/gadgets/link/edit/css.js: Ch1usuV4
+build/browser/src/components/gadgets/link/edit/html.js: DVrx9jGX
+build/browser/src/components/gadgets/link/index.js: UeN0M7ly
+build/browser/src/components/gadgets/link/edit/index.js: NCyUAzZZ
+build/browser/src/components/gadgets/link/edit/helpers.js: 6dNbeUSO
