--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@dashkite/vega-client": "link:../vega-client",
     "@dashkite/vellum": "link:../vellum",
     "@gullerya/object-observer": "^6.1.3",
-    "minisearch": "^7.1.0"
+    "minisearch": "^7.1.0",
+    "unsplash-js": "^7.0.19"
   }
 }
