--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   "author": "Daniel Yoder",
   "imports": {
     "#configuration": "./build/browser/src/configuration.js",
-    "#helpers/*": "./build/browser/src/helpers/*.js",
     "#helpers/component/*": "./build/browser/src/helpers/component/*.js",
+    "#helpers/state": "./build/browser/src/helpers/state/index.js",
+    "#helpers/*": "./build/browser/src/helpers/*.js",
     "#templates/*": "./build/browser/src/templates/*.js"
   },
   "exports": {
@@ -63,6 +64,7 @@
     "@dashkite/talisa-render": "link:../talisa-render",
     "@dashkite/vega-client": "link:../vega-client",
     "@dashkite/vellum": "link:../vellum",
+    "@dashkite/verve": "link:../verve",
     "@gullerya/object-observer": "^6.1.3",
     "minisearch": "^7.1.0",
     "unsplash-js": "^7.0.19"
