--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -40,7 +40,7 @@ build/browser/src/helpers/icons.js: 1UM967FL
 build/browser/src/components/site/add/html.js: b-qHXDy5
 build/browser/src/components/site/remove/index.js: I6VuQZSn
 build/browser/src/components/image/select/index.js: X4-5JmM3
-build/browser/src/components/gadgets/icon/edit/helpers.js: 3VcIX1A-
+build/browser/src/components/gadgets/icon/edit/helpers.js: q5_rvdOh
 build/browser/src/components/site/summarize/html.js: 9uOR6emx
 build/browser/src/components/site/edit/index.js: cRx50DLm
 build/browser/src/helpers/state.js: gytKKZQv
@@ -49,7 +49,7 @@ build/browser/src/components/gadgets/layout/edit/css.js: Ch1usuV4
 build/browser/src/components/gadgets/navigation/edit/css.js: Ch1usuV4
 build/browser/src/components/image/select/states/index.js: DCjZTUsG
 build/browser/src/components/image/select/states/meta.js: YyhEnxwi
-build/browser/src/components/gadgets/icon/edit/index.js: BHEV723A
+build/browser/src/components/gadgets/icon/edit/index.js: Sp77Zcq-
 build/browser/src/components/image/select/states/start.js: fcyQd2MH
 build/browser/src/components/gadgets/image/edit/helpers.js: E48-AcbX
 build/browser/src/components/gadgets/image/edit/index.js: 2tvXidce
@@ -68,7 +68,7 @@ build/browser/src/components/gadgets/link/edit/html.js: ywn0RtuH
 build/browser/src/components/gadgets/page/edit/html.js: 7V1gdnQv
 build/browser/src/components/gadgets/page/edit/helpers.js: 28TF6GRk
 build/browser/src/components/gadgets/layout/edit/html.js: Vp0hkaOB
-build/browser/src/components/gadgets/icon/edit/html.js: Mg_eTz2t
+build/browser/src/components/gadgets/icon/edit/html.js: Sy_GzEtg
 build/browser/src/components/gadgets/image/edit/html.js: v3_132J2
 build/browser/src/components/gadgets/text/edit/css.js: Ch1usuV4
 build/browser/src/components/site/edit/render/editor.js: 0p4WfO0e
