editor mechanics code-complete?

--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -31,7 +31,7 @@ build/browser/src/components/site/summarize/index.js: RvCs-4Ad
 build/browser/src/components/site/add/index.js: Cuu2Sgc_
 build/browser/src/components/sites/view/index.js: GWHr4Fw3
 build/browser/src/components/gadgets/icon/edit/css.js: I4s-cmrG
-build/browser/src/components/site/edit/css.js: xxOtx6AZ
+build/browser/src/components/site/edit/css.js: qYsr6Uuy
 build/browser/src/components/site/add/css.js: FG4ecNpu
 build/browser/src/components/site/edit/html.js: m6CO_aIi
 build/browser/src/components/site/summarize/css.js: FG4ecNpu
@@ -42,7 +42,7 @@ build/browser/src/components/site/remove/index.js: I6VuQZSn
 build/browser/src/components/image/select/index.js: ABK3KqJo
 build/browser/src/components/gadgets/icon/edit/helpers.js: q5_rvdOh
 build/browser/src/components/site/summarize/html.js: 9uOR6emx
-build/browser/src/components/site/edit/index.js: cRx50DLm
+build/browser/src/components/site/edit/index.js: j-jooItw
 build/browser/src/helpers/state.js: gytKKZQv
 build/browser/src/components/site/edit/helpers.js: b8nf8vMN
 build/browser/src/components/gadgets/layout/edit/css.js: Ch1usuV4
