--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -31,7 +31,7 @@ build/browser/src/components/site/summarize/index.js: RvCs-4Ad
 build/browser/src/components/site/add/index.js: Cuu2Sgc_
 build/browser/src/components/sites/view/index.js: GWHr4Fw3
 build/browser/src/components/gadgets/icon/edit/css.js: i0dWP9Q1
-build/browser/src/components/site/edit/css.js: qYsr6Uuy
+build/browser/src/components/site/edit/css.js: RMnhzVpB
 build/browser/src/components/site/add/css.js: FG4ecNpu
 build/browser/src/components/site/edit/html.js: m6CO_aIi
 build/browser/src/components/site/summarize/css.js: FG4ecNpu
@@ -71,7 +71,7 @@ build/browser/src/components/gadgets/layout/edit/html.js: Vp0hkaOB
 build/browser/src/components/gadgets/icon/edit/html.js: 12R7nXPY
 build/browser/src/components/gadgets/image/edit/html.js: 1sx8nxie
 build/browser/src/components/gadgets/text/edit/css.js: Ch1usuV4
-build/browser/src/components/site/edit/render/editor.js: RFjRge_0
+build/browser/src/components/site/edit/render/editor.js: isoED1DI
 build/browser/src/components/gadgets/text/edit/helpers.js: m0P2BfVQ
 build/browser/src/components/gadgets/icon/edit/icons/css.js: otsWvYyp
 build/browser/src/components/gadgets/icon/edit/icons/index.js: of7HL-X9
