--- a/package.json
+++ b/package.json
@@ -48,20 +48,24 @@
     "@dashkite/genie-yaml": "link:../genie-yaml"
   },
   "dependencies": {
+    "@dashkite/dominator": "link:../dominator",
     "@dashkite/helium": "^0.4.4",
     "@dashkite/html-render": "link:../html-render",
     "@dashkite/joy": "link:../joy",
     "@dashkite/katana": "^0.4.8",
     "@dashkite/media-type": "link:../media-type",
+    "@dashkite/observable": "link:../observable",
     "@dashkite/posh": "link:../posh",
     "@dashkite/rio": "link:../rio",
     "@dashkite/rio-arriba": "link:../rio-arriba",
     "@dashkite/rio-forms": "link:../rio-forms",
+    "@dashkite/rio-observable": "link:../rio-observable",
     "@dashkite/rio-oxygen": "link:../rio-oxygen",
     "@dashkite/rio-profile": "link:../rio-profile",
     "@dashkite/rio-vega": "link:../rio-vega",
     "@dashkite/talisa": "link:../talisa",
     "@dashkite/talisa-render": "link:../talisa-render",
+    "@dashkite/talos": "link:../talos",
     "@dashkite/vega-client": "link:../vega-client",
     "@dashkite/vellum": "link:../vellum",
     "@dashkite/verve": "link:../verve",
