one way to approach it

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "@dashkite/dominator": "link:../dominator",
     "@dashkite/europa": "link:../europa",
+    "@dashkite/halstead": "link:../halstead",
     "@dashkite/helium": "^0.4.4",
     "@dashkite/html-render": "link:../html-render",
     "@dashkite/joy": "link:../joy",
