--- a/package.json
+++ b/package.json
@@ -51,12 +51,14 @@
     "@dashkite/dominator": "link:../dominator",
     "@dashkite/europa": "link:../europa",
     "@dashkite/format-text": "link:../format-text",
+    "@dashkite/generic": "link:../generic",
     "@dashkite/halstead": "link:../halstead",
     "@dashkite/helium": "link:../helium",
     "@dashkite/html-render": "link:../html-render",
     "@dashkite/joy": "link:../joy",
     "@dashkite/katana": "^0.4.8",
     "@dashkite/media-type": "link:../media-type",
+    "@dashkite/neon-drive": "link:../neon-drive",
     "@dashkite/observable": "link:../observable",
     "@dashkite/posh": "link:../posh",
     "@dashkite/rio": "link:../rio",
